[package]
name = "kittenalert"
version = "0.1.0"
authors = ["lisa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"

reqwest = "0.10"

tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2.0"

chrono = "0.4"

timer = "0.2.0"

futures = "0.3"

